[package]
name = "suspender"
version = "0.1.0"
authors = ["Infernox64 <infernox64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-args = "0.2.0"
subprocess = "0.2.4"
serde_yaml = "0.8.11"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
